opam-version: "2.0"
name: "rooplpp"
version: "1.0.0"
synopsis: "Interpreter for ROOPL++, a reversible object-oriented language"
description: """
An OCaml interpreter for ROOPL++ (Cservenka 2018), a reversible
object-oriented programming language. Programs can be run forwards and, with
-inverse, emitted as their inverse program. Built with a hand-written
Makefile (ocamlc / ocamllex / ocamlyacc); see README.md. This opam file
declares the project's dependencies and metadata; it does not switch the build
to dune.
"""
maintainer: "tetsuo-jp@users.noreply.github.com"
authors: ["Tetsuo Yokoyama"]
license: "GPL-3.0-only"
homepage: "https://github.com/yokoyama-lab/ROOPLPP-interpreter"
bug-reports: "https://github.com/yokoyama-lab/ROOPLPP-interpreter/issues"
dev-repo: "git+https://github.com/yokoyama-lab/ROOPLPP-interpreter.git"
depends: [
  "ocaml" {>= "4.04"}
  "ocamlfind" {build}
  "extlib"
  "ounit2" {with-test}
]
build: [
  [make "-C" "src"]
  [make "-C" "test"] {with-test}
]
